--- a/index.html
+++ b/index.html
@@ -1,28 +1,15 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Auto Clicker</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Auto Click</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Auto Clicker</h1>
-        <div class="click-counter" id="clickCount">0 Cliques</div>
-        
-        <div class="controls">
-            <button id="startStop" class="btn start">Iniciar</button>
-            <button id="reset" class="btn reset">Resetar</button>
-        </div>
+  <h1>Auto Clicker com Cursor</h1>
+  <button id="clickButton">Clique aqui</button>
+  <p id="contador">Cliques: 0</p>
 
-        <div class="stats">
-            <p>Velocidade: <span id="cps">0</span> cliques/segundo</p>
-            <p>Total de cliques: <span id="totalClicks">0</span></p>
-        </div>
-    </div>
-
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
